@@ -308,6 +308,24 @@
 </form>
 
 <!-- Positioning methods bench -->
+
+<table>
+  <thead>
+    <tr id="tr_offset_parent_test">
+      <th>
+        <div id="th_offset_parent_test">blah</div>
+      </th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>
+        <div id="td_offset_parent_test">blah</div>
+      </td>
+    </tr>
+  </tbody>
+</table>
+
 <div id="body_relative" style="position: relative;"></div>
 <div id="body_absolute" style="position: absolute; top: 10px; left: 10px">
   <div id="absolute_absolute" style="position: absolute; top: 10px; left:10px; width: 25px; height: 25px; overflow:scroll;">
